[gd_scene load_steps=9 format=2]

[ext_resource path="res://content/gadgets/mineraltree/MineralTree.gd" type="Script" id=1]
[ext_resource path="res://content/gadgets/mineraltree/mineraltree-Sheet.png" type="Texture" id=2]
[ext_resource path="res://content/gadgets/mineraltree/3xiron-3xwater-3xcobalt-ranken-Sheet.png" type="Texture" id=3]
[ext_resource path="res://content/gadgets/mineraltree/FruitGrowth.gd" type="Script" id=4]
[ext_resource path="res://content/drop/iron/iron_smol.png" type="Texture" id=5]
[ext_resource path="res://content/shared/Usable.tscn" type="PackedScene" id=6]
[ext_resource path="res://systems/audio/Sound.tscn" type="PackedScene" id=8]
[ext_resource path="res://content/sounds/Locations/Vitamintree/Trippy loop.wav" type="AudioStream" id=9]

[node name="MineralTree" type="Node2D" groups=["saveable"]]
script = ExtResource( 1 )

[node name="Stem" type="Sprite" parent="."]
position = Vector2( 0, -25 )
texture = ExtResource( 2 )
hframes = 16
frame = 15

[node name="FruitPosition1_1" type="Sprite" parent="."]
visible = false
position = Vector2( 7, -21 )
texture = ExtResource( 3 )
hframes = 9
frame = 1
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="FruitPosition1_1"]
position = Vector2( 1, 0 )
z_index = -1
texture = ExtResource( 5 )

[node name="Usable" parent="FruitPosition1_1" instance=ExtResource( 6 )]

[node name="FruitPosition2_1" type="Sprite" parent="."]
visible = false
position = Vector2( -14, -16 )
texture = ExtResource( 3 )
hframes = 9
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="FruitPosition2_1"]
position = Vector2( 1, 0 )
z_index = -1
texture = ExtResource( 5 )

[node name="Usable" parent="FruitPosition2_1" instance=ExtResource( 6 )]

[node name="FruitPosition2_2" type="Sprite" parent="."]
visible = false
position = Vector2( 19, -11 )
texture = ExtResource( 3 )
hframes = 9
frame = 2
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="FruitPosition2_2"]
position = Vector2( 1, 0 )
z_index = -1
texture = ExtResource( 5 )

[node name="Usable" parent="FruitPosition2_2" instance=ExtResource( 6 )]

[node name="FruitPosition3_1" type="Sprite" parent="."]
visible = false
position = Vector2( 8, -40 )
texture = ExtResource( 3 )
hframes = 9
frame = 1
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="FruitPosition3_1"]
position = Vector2( 1, 0 )
z_index = -1
texture = ExtResource( 5 )

[node name="Usable" parent="FruitPosition3_1" instance=ExtResource( 6 )]

[node name="FruitPosition3_2" type="Sprite" parent="."]
visible = false
position = Vector2( 16, -14 )
texture = ExtResource( 3 )
hframes = 9
frame = 2
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="FruitPosition3_2"]
position = Vector2( 1, 0 )
z_index = -1
texture = ExtResource( 5 )

[node name="Usable" parent="FruitPosition3_2" instance=ExtResource( 6 )]

[node name="FruitPosition3_3" type="Sprite" parent="."]
visible = false
position = Vector2( -17, -21 )
texture = ExtResource( 3 )
hframes = 9
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="FruitPosition3_3"]
position = Vector2( 1, 0 )
z_index = -1
texture = ExtResource( 5 )

[node name="Usable" parent="FruitPosition3_3" instance=ExtResource( 6 )]

[node name="Hanger" type="Sprite" parent="."]
visible = false
position = Vector2( -18, -24 )
texture = ExtResource( 3 )
hframes = 9

[node name="TreeAmbience" parent="." instance=ExtResource( 8 )]
stream = ExtResource( 9 )
randomVolume = 0.0
randomPitch = 0.0
maxAudibleDistance = 100.0
minAudibleDistance = 50.0
fadeInTime = 1.0
fadeOutTime = 1.0
loop = true
